# lorentzian-trading-core

./: CHANGELOG.md  LICENSE  Manifest.in  README.md  pyproject.toml  requirement.txt  setup.py
.github/workflows/: python-package  python-package.yml
lorentzian_trading/: __init__.py
lorentzian_trading/core/: classifier.py  distance.py
lorentzian_trading/features/: engineering.py
lorentzian_trading/filters/: market.py
tests/: Makefile  conftest.py  pytest.ini
tests/scripts/: run_tests.py
tests/test_core/: test_classifier.py  test_distance.py
tests/test_features/: test_engineering.py
tests/test_filters/: test_market.py
tests/test_integration/: test_full_pipeline.py
tests/test_performance/: test_benchmarks.py
tests/test_utils/: test_data.py
